# Performance-Review-Backend

./: .gitignore  .travis.yml  README.md
review/: .dockerignore  .gitignore  Dockerfile  api.Dockerfile  manage.py  pyproject.toml  sample.env  schema.graphql  statics.Dockerfile  update-schmea.sh
review/accounts/: admin.py  forms.py  interactors.py  models.py  urls.py  views.py
review/accounts/interactors/: admin_progress.py  user.py
review/accounts/migrations/: 0001_initial.py  0002_auto_20191211_0826.py  0003_auto_20191216_1325.py  0004_user_has_started.py  0005_user_avatar_url.py  0006_auto_20201006_1256.py  0006_auto_20201006_1530.py  0007_remove_user_has_started.py  0008_auto_20201221_0646.py  0009_user_is_hr.py
review/accounts/schema/: auth_mutations.py  change_password_mutation.py  login_mutation.py  logout_mutation.py  start_review_mutation.py  user_query.py
review/core/: admin.py  enums.py  forms.py  interactors.py  models.py  urls.py  views.py
review/core/interactors/: authorization.py  manager_person_review.py  manager_project_comment.py  manager_review.py  participation.py  person_review.py  project.py  project_comment.py  project_review.py  round.py  settings.py  utils.py
review/core/migrations/: 0001_initial.py  0002_auto_20191209_1422.py  0003_auto_20191211_1111.py  0004_auto_20191214_1510.py  0005_auto_20191216_1315.py  0006_settings.py  (+44 more)
review/reporting/: urls.py  views.py
review/requirements/: base.txt
review/review/: asgi.py  settings.py  urls.py  wsgi.py
review/templates/: base.html
review/utils/: base_enum.py
(+62 files in other folders)
