[tool.poetry]
name = "performance-review-backend"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
django-environ = "^0.4.5"
graphene-django = "^2.7"
graphene = "^2.1"
django-filter = "^2.2"
psycopg2-binary = "^2.8"
django-cors-headers = "^3.2"
gunicorn = "^20.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
